[tool.poetry]
name = "piidetector"
version = "0.1.0"
description = ""
authors = ["Michał Ziętkowski <michal.zietkowski@stxnext.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
pydantic-settings = "^2.5.2"
commonregex = "^1.5.4"
spacy = "^3.6"
langchain-openai = "^0.2.2"
langchain = "^0.3.3"
python-dotenv = "^1.0.1"
bidict = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
